force-app/main/default/objects/AssessmentQuestion__c/AssessmentQuestion__c.object-meta.xml
<CustomObject>
    <label>Assessment Question</label>
    <nameField>
        <displayFormat>AQ_{YYYYMMDD}_{000}</displayFormat>
        <label>Questions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>