force-app/main/default/objects/AssessmentQuestion__c/fields/FileIncluded__c.field-meta.xml
<CustomField>
    <fullName>FileIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Included</label>
    <type>Checkbox</type>
</CustomField>