force-app/main/default/objects/AssessmentQuestion__c/fields/HasRelatedQuestion__c.field-meta.xml
<CustomField>
    <fullName>HasRelatedQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Related Question</label>
    <type>Checkbox</type>
</CustomField>