force-app/main/default/objects/AssessmentQuestion__c/fields/RelatedCriteria__c.field-meta.xml
<CustomField>
    <fullName>RelatedCriteria__c</fullName>
    <label>Related Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>