force-app/main/default/objects/AssessmentQuestion__c/fields/RelatedQuestionId__c.field-meta.xml
<CustomField>
    <fullName>RelatedQuestionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Question</label>
    <referenceTo>AssessmentQuestion__c</referenceTo>
    <relationshipLabel>Assessment Question</relationshipLabel>
    <relationshipName>Assessment_Question</relationshipName>
    <type>Lookup</type>
</CustomField>