force-app/main/default/objects/AssessmentQuestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>HasRelatedQuestion__c</columns>
    <columns>FileIncluded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>